--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.8.1",
     "react-scripts": "^5.0.1",
+    "recharts": "^2.4.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
