--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
+    "react-currency-masked-input": "^2.5.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.8.1",
     "react-scripts": "^5.0.1",
